--- a/.github/workflows/signezily_infra_cicd.yml
+++ b/.github/workflows/signezily_infra_cicd.yml
@@ -1,4 +1,4 @@
-name: SIGNEZILY CD
+name: TERRAFORM SIGNEZILY CICD
 
 on:
   workflow_dispatch:
@@ -21,14 +21,14 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '.github/workflows/signezilyCD.yml'
+      - '.github/workflows/signezily_infra_cicd.yml'
       - 'terraform/modules/**'
       - 'terraform/signezily-infra/*'
   pull_request:
     branches: [ main ]
     types: ['opened', 'reopened', 'synchronize', 'ready_for_review']
     paths:
-      - '.github/workflows/signezilyCD.yml'
+      - '.github/workflows/signezily_infra_cicd.yml'
       - 'terraform/modules/**'
       - 'terraform/signezily-infra/*'
 
@@ -76,7 +76,9 @@ jobs:
         with:
           filters: |
             dev:
-              - 'terraform/signezily-infra/dev.tfvars'
+              - 'terraform/signezily-infra/*'
+              - 'terraform/modules/*'
+              - 'package.json'
             prod:
               - 'terraform/signezily-infra/prod.tfvars'
 
