--- a/.github/workflows/signezily_infra_cicd.yml
+++ b/.github/workflows/signezily_infra_cicd.yml
@@ -143,30 +143,31 @@ jobs:
         if: ${{ env.ExecutionType == 'plan' }}
         run: terraform plan -no-color -var-file="${{ matrix.environment.tfvars }}"
 
-      # - name: Update Pull Request
-      #   uses: actions/github-script@v6
-      #   if: github.event_name == 'pull_request' && env.ExecutionType == 'plan'
-      #   env:
-      #     PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     script: |
-      #       const output = `### Terraform "${{ matrix.environment.name }}"
-      #       #### Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-      #       #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-      #       #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-      #       <details><summary>Show Plan</summary>
+      - name: Update Pull Request
+        uses: actions/github-script@v6
+        if: github.event_name == 'pull_request' && env.ExecutionType == 'plan'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          
+          script: |
+            const output = `### Terraform "${{ matrix.environment.name }}"
+            #### Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+            <details><summary>Show Plan</summary>
 
-      #       \`\`\`${process.env.PLAN}\`\`\`
-      #       </details>
+            \`\`\`${process.env.PLAN}\`\`\`
+            </details>
 
-      #       *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-      #       github.rest.issues.createComment({
-      #       issue_number: context.issue.number,
-      #       owner: context.repo.owner,
-      #       repo: context.repo.repo,
-      #       body: output
-      #       })
+            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+            github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: output
+            })
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push' && env.ExecutionType == 'apply'
