--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
         function:
           - build_web
           # - build_marketing
-          # - build_documentation
+          - build_documentation
 
     steps:
       - name: Checkout
@@ -117,13 +117,6 @@ jobs:
               - 'docker/Dockerfile.documentation'
               - 'apps/documentation/**'
               - 'package.json'
-
-      # - name: Mask a Secret Value
-      #   run: |
-      #     echo "::add-mask::${{ secrets.AWS_REGION }}"
-      #     echo "::add-mask::${{ secrets.AWS_ACCOUNT }}"
-      #     echo "::add-mask::${{ secrets.AWS_ACCOUNT }}"
-
 
       - name: Build Signezily Web Docker Image
         if: |
