--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -99,5 +99,6 @@
     "vite": "^6.1.0",
     "vite-plugin-babel-macros": "^1.0.6",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "version": "1.10.0-rc.0"
 }
