--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -36,7 +36,7 @@
     "@react-email/section": "0.0.10",
     "@react-email/tailwind": "0.0.9",
     "@react-email/text": "0.0.6",
-    "nodemailer": "6.9.9",
+    "nodemailer": "^6.10.1",
     "react-email": "1.9.5",
     "resend": "2.0.0"
   },
