--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -27,7 +27,6 @@
     "@lingui/core": "^5.2.0",
     "@lingui/macro": "^5.2.0",
     "@lingui/react": "^5.2.0",
-    "jose": "^6.0.0",
     "@noble/ciphers": "0.4.0",
     "@noble/hashes": "1.3.2",
     "@node-rs/bcrypt": "^1.10.0",
@@ -37,6 +36,7 @@
     "@vvo/tzdb": "^6.117.0",
     "csv-parse": "^5.6.0",
     "inngest": "^3.19.13",
+    "jose": "^6.0.0",
     "kysely": "0.26.3",
     "luxon": "^3.4.0",
     "micro": "^10.0.1",
@@ -44,6 +44,8 @@
     "oslo": "^0.17.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.11.3",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "playwright": "1.52.0",
     "posthog-js": "^1.245.0",
     "posthog-node": "^4.17.0",
